Fixed that irksome bug where the small button (when used with font awesome icons) is shifted up by one pixel. Not a huge win, but It will be nice to never think about it again!

--- a/war/_static/css/AdminLTE.css
+++ b/war/_static/css/AdminLTE.css
@@ -4042,4 +4042,8 @@ a.btn.btn-warning.live-preview-return-button{
 	display: inline-block;
 	width: 100%;
 }
+
+.btn.btn-sm{
+	padding: 6px 10px 4px 10px;
+}
 }
